--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,14 @@
         <activity android:name=".CrimePagerActivity"
             android:parentActivityName=".CrimeListActivity">
         </activity>
+        <provider
+            android:authorities="com.example.android.crimeapp.fileprovider"
+            android:name="android.support.v4.content.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/files"/>
+        </provider>
     </application>
-
 </manifest>
